--- a/What SmartPhone do you want?/Base.lproj/Main.storyboard
+++ b/What SmartPhone do you want?/Base.lproj/Main.storyboard
@@ -330,21 +330,91 @@
             </objects>
             <point key="canvasLocation" x="2214" y="510"/>
         </scene>
-        <!--View Controller-->
+        <!--Optimization View Controller-->
         <scene sceneID="FI8-ro-Alf">
             <objects>
-                <viewController id="5gm-cx-fYZ" sceneMemberID="viewController">
+                <viewController id="5gm-cx-fYZ" customClass="OptimizationViewController" customModule="What_SmartPhone_do_you_want_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fUl-jx-gvd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Single-Critical Optimization with Cost" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Ne-AW-Lcv">
+                                <rect key="frame" x="32" y="50" width="311" height="22.5"/>
+                                <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CH0-Be-py4">
+                                <rect key="frame" x="27.5" y="80" width="320" height="61"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="61" id="rA3-Gr-4aG"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="5gm-cx-fYZ" id="tzR-hA-WS6"/>
+                                    <outlet property="delegate" destination="5gm-cx-fYZ" id="2Re-vh-hFf"/>
+                                </connections>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ur-9k-q3B">
+                                <rect key="frame" x="79" y="149" width="217" height="49"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="217" id="db0-ma-TQw"/>
+                                    <constraint firstAttribute="height" constant="49" id="zQ7-6C-GaM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="22"/>
+                                <state key="normal" title="Single-Critical Search">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="singleCriticalSearch:" destination="5gm-cx-fYZ" eventType="touchUpInside" id="fpH-MY-SHR"/>
+                                    <action selector="touchDownTheButtonOfSingleCriticalOptimization:" destination="5gm-cx-fYZ" eventType="touchDown" id="h2B-v8-WUO"/>
+                                    <segue destination="c17-E7-feY" kind="show" identifier="singleCriticalOptimizationSegue" id="uyg-JS-6eu"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1Ur-9k-q3B" firstAttribute="top" secondItem="CH0-Be-py4" secondAttribute="bottom" constant="8" id="8PL-MK-WfL"/>
+                            <constraint firstItem="1Ur-9k-q3B" firstAttribute="centerX" secondItem="fUl-jx-gvd" secondAttribute="centerX" id="F9p-Ev-J6d"/>
+                            <constraint firstItem="5Ne-AW-Lcv" firstAttribute="centerX" secondItem="fUl-jx-gvd" secondAttribute="centerX" id="VRA-q5-TrO"/>
+                            <constraint firstItem="5Ne-AW-Lcv" firstAttribute="top" secondItem="T8W-OG-7bw" secondAttribute="top" constant="30" id="m1R-zN-O60"/>
+                            <constraint firstItem="CH0-Be-py4" firstAttribute="top" secondItem="5Ne-AW-Lcv" secondAttribute="bottom" constant="7.5" id="mqN-MP-DC8"/>
+                            <constraint firstItem="CH0-Be-py4" firstAttribute="centerX" secondItem="fUl-jx-gvd" secondAttribute="centerX" id="oAE-7a-Cp5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="T8W-OG-7bw"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="search" id="J1U-xZ-pMr"/>
+                    <connections>
+                        <outlet property="parametersNamesForSingleCriticalOptimization" destination="CH0-Be-py4" id="A0v-41-rUL"/>
+                        <outlet property="searchForSingleCriticalOptimization" destination="1Ur-9k-q3B" id="3kA-mb-iI2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dBN-6C-7HQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="767" y="-152"/>
+            <point key="canvasLocation" x="765.60000000000002" y="-152.47376311844079"/>
+        </scene>
+        <!--The Best Choice Of Smartphone View Controller-->
+        <scene sceneID="CjX-sg-9gI">
+            <objects>
+                <viewController id="NVO-tE-wcp" customClass="TheBestChoiceOfSmartphoneViewController" customModule="What_SmartPhone_do_you_want_" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WZS-5l-m4L">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="C74-ZE-2DP"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zCc-A2-bE8">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="6o3-nl-hvh">
+                            <connections>
+                                <action selector="backToPreviousScreen:" destination="NVO-tE-wcp" id="q8r-ym-EUc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kDh-x3-R2R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2214" y="-151"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="n4N-tE-szQ">
@@ -382,6 +452,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mHK-iU-828" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="765.60000000000002" y="510.49475262368821"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="j3m-fK-XuZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="c17-E7-feY" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EgP-5U-ggq">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="NVO-tE-wcp" kind="relationship" relationship="rootViewController" id="bnf-FB-JnU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oTo-dO-1no" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1489" y="-152"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
